fix z-index for categories

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -587,7 +587,7 @@ input[type=number] {
   overflow-y: auto;
   transform: translateX(-100%);
   transition: transform 800ms cubic-bezier(0.19, 1, 0.22, 1);
-  z-index: 15;
+  z-index: 19;
 }
 .burger__inner {
   padding: 14.2rem 5rem 2.2rem 5rem;
@@ -850,7 +850,7 @@ input[type=number] {
   overflow-y: auto;
   transform: translateX(-100%);
   transition: transform 800ms cubic-bezier(0.19, 1, 0.22, 1);
-  z-index: 15;
+  z-index: 17;
 }
 .list-all-categories__inner {
   padding: 10.2rem 5rem 2.2rem 5rem;
@@ -929,7 +929,7 @@ input[type=number] {
   overflow-y: auto;
   transform: translateX(-100%);
   transition: transform 800ms cubic-bezier(0.19, 1, 0.22, 1);
-  z-index: 15;
+  z-index: 17;
 }
 .list-application__inner {
   padding: 10.2rem 5rem 2.2rem 5rem;
@@ -1019,7 +1019,7 @@ input[type=number] {
   overflow-y: auto;
   transform: translateX(-100%);
   transition: transform 500ms cubic-bezier(0.19, 1, 0.22, 1);
-  z-index: 15;
+  z-index: 17;
 }
 .list-agriculture__inner {
   padding: 10.2rem 5rem 2.2rem 5rem;
